--- a/virus.html
+++ b/virus.html
@@ -62,7 +62,7 @@
     <h1>ウイルス感染しました！</h1>
     <p>すぐにウイルス対策をする必要があります。</p>
     <p>支払いを済ませるとウイルス駆除が開始されます</p>
-    <h1 class="blink">今すぐお支払いください！！</h1> <!-- blink クラスを適用 -->
+    <h1 class="blink">今すぐお支払いください！！</h1>
     <div id="countdown"></div>
     <audio id="virus-sound" autoplay loop>
         <source src="https://d.kuku.lu/nv76ew55e" type="audio/mpeg">
