--- a/virus.html
+++ b/virus.html
@@ -59,7 +59,7 @@
 </head>
 <body>
   <div class="virus-container">
-    <h1>ウイルス感染しました！</h1>
+    <h1>ウイルスに感染しました！</h1>
     <p>すぐにウイルス対策をする必要があります。</p>
     <p>支払いを済ませるとウイルス駆除が開始されます</p>
     <h1 class="blink">今すぐお支払いください！！</h1>
