--- a/virus.html
+++ b/virus.html
@@ -64,7 +64,8 @@
     <p>支払いを済ませるとウイルス駆除が開始されます</p>
     <h1 class="blink">今すぐお支払いください！！</h1>
     <div id="countdown"></div>
-    <audio id="virus-sound" autoplay loop>
+    <img id="virus-image" src=""    
+      <audio id="virus-sound" autoplay loop>
         <source src="https://d.kuku.lu/nv76ew55e" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
