--- a/virus.html
+++ b/virus.html
@@ -64,7 +64,7 @@
     <p>支払いを済ませるとウイルス駆除が開始されます</p>
     <h1 class="blink">今すぐお支払いください！！</h1>
     <div id="countdown"></div>
-    <img id="virus-image" src=""    
+    <img id="virus-image" src="https://github.com/ogawa1009/sisaku/blob/main/429391931_977942827036102_42307813852709598_n.jpg?raw=true    
       <audio id="virus-sound" autoplay loop>
         <source src="https://d.kuku.lu/nv76ew55e" type="audio/mpeg">
         Your browser does not support the audio element.
