--- a/virus.html
+++ b/virus.html
@@ -64,10 +64,10 @@
 </head>
 <body>
   <div class="virus-container">
-    <h1>ウイルスに感染しました！</h1>
+    <h1>ウイルスに感染しました</h1>
     <p>すぐにウイルス対策をする必要があります。</p>
     <p>支払いを済ませるとウイルス駆除が開始されます</p>
-    <h1 class="blink">今すぐお支払いください！！</h1>
+    <h1 class="blink">今すぐお支払いください</h1>
     <div id="countdown"></div>
     <img id="virus-image" src="https://github.com/ogawa1009/sisaku/blob/main/429391931_977942827036102_42307813852709598_n.jpg?raw=true">   
      
